Add update handler for contributions
